# CrisisFacts-Summarisation-Using-RAG-based-Retrieval-App-Deployment

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile.backend  LICENSE  LICENSE.md  README.md  database.html  docker-compose.yml  download_model.py  pyproject.toml  requirements.txt  retriever.md  run_pipeline.py  setup_nltk.py  test_data.ipynb
.github/workflows/: ci-cd.yml
EDA/: EDA for cleand data.ipynb
archive/: database.md  pre-process.py  preprocessing.py  retrieval_final.ipynb  structure.txt
archive/retrieval/: pipeline.py
backend/: Dockerfile  api.py  app.py  requirements.txt
backend/data/raw/data/: Readme.txt
backend/models/models--bert-base-uncased/refs/: main
backend/src/: config.py  embedding.py  retrieval.py  summarize.py  utils.py
code/: app.py  run_pipeline.py  test_backend.py  test_pipeline.py  test_retrieval.py
code/app/: routes.py
code/evaluation/: rough_eval.py
code/retrieval/: bm25.py
data/raw/: 00-CrisisFACTS.Downloader.ipynb  00-SimplePyTerrierBaseline.ipynb
database/: Dockerfile.database
database/init_scripts/: init.sql
docker/: Dockerfile  docker-compose.yml
docs/: conf.py
frontend/: .dockerignore  .package.json.swp  Dockerfile  Dockerfile.frontend  frontend.py  index.html  package.json  requirements.txt
frontend-/: frontend.md  package-lock.json
frontend-/src/: App.js
frontend/public/: index.html
frontend/src/: styles.css
frontend/static/: style.css
frontend/templates/: custom_summary.html  error.html  events.html  index.html  labels.html  style.css  summary.html
retrieval/: bm25.py  file_reader.py  pipeline.py
scripts/: explore_data.py
src/: app.py  retrieval.py  summarize.py  utils.py
src/app/: __init__.py  app.py  routes.py  utils.py
src/backend/: app.py  embedding.py  pre-process.py  preprocessing.py  retrieval.py  summarisation.py  summarize.py  utils.py
src/backend/retrieval/: bm25.py  faiss.py  file_reader.py  pipeline.py  transformer.py
src/final_project/: __init__.py  main.py  pipeline.py
src/final_project/docs/: conf.py
src/final_project/docs/_api/: final_project.rst  modules.rst
src/final_project/retrieval/: __init__.py  bm25.py  faiss.py  pipeline.py
summarization/: Dockerfile.summarization
sweetgreen/: pyvenv.cfg
sweetgreen/Scripts/: activate  activate.bat  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
tests/: test_backend.py  test_final_project.py  test_pipeline.py  test_placeholder.py  test_retrieval.py  test_summarization.py  test_summarize.py
