[tool.poetry]
name = "final_project"
version = "0.0.0"
description = "Research and experimental Python package for DSAN 6700 final project."
authors = ["Isfar Baset, Ziyan Di, Sheeba Moghal, Bella Shi and Jacky Zhang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.3"
pytest-cov = "^4.0"
sphinx = "<6.0"
sphinx-rtd-theme = "^1.3"
myst_nb = "<0.18"

[tool.poetry.group.dev.dependencies]
sphinx-autoapi = "<2.0"

[tool.semantic_release]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]                                                    # version location
branch = "main"                                      # branch to make releases of
changelog_file = "CHANGELOG.md"                      # changelog file
build_command = "pip install poetry && poetry build" # build dists 

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"